12345678901234567890123456789012345678901234567890123456789012345678901234567890
         1         2         3         4         5         6         7         8
----+----|----+----|----+----|----+----|----+----|----+----|----+----|----+----|



ChangeLog (IOMETER2 - 2004.mm.mm):
==================================

- Applied patches:
   - invalid_spec.patch by Lamont Cranston (Allows the user to set any
     request sizes, sector allignment etc. - even if it doesn't match the
     storage devices block size. While in interactive mode, the user
     must confirm his will - in batch mode invalid specifications gets
     executed without requiring any kind of confirmation / force flag).
   - scross_spec_list.patch by Lamont Cranston (Ensures that the access
     specification list gets scrolled during the run - so the active
     access specification can always be seen).
   - linux_kstat_build_fix.patch by Lamont Cranston (Fixes a minor bug
     in the build of the linux_kstat version for Linux 2.4).
   - IOTargetDisk_cpp.patch by Lamont Cranston (Closes the files in
     getSizeOfPhysDisk() and getSectorSizeOfPhysDisk() under Linux
     and explain the use of the BLKBSZGET define.
   - disk_full.patch by Lamont Cranston (fixes handling of the disk full
     condition when preparing logical drives).
   - iometer2.Lamont001ConstructorCleanup.patch by Daniel Scheibli
     (bundles the changes contributed by Lamont Cranston - it introduces
     the new IOManagerWin.cpp file).
- Cleanup:
   - Corrected the macro definition for BLKGETSIZE64 in IOCommon.h
- Documentation:
   - Added the initial drop of the DocBook sources of the first part of
     the Iometer Users Guide (converted from OpenOffice - by James Rogers).
- Others:
   - Changed the "Help About..." button of the Iometer Wizard to reflect
     the current status (Open Source,...) of Iometer.
   - Converted the Iometer Wizard to the file format of the 2000 version